[gd_scene load_steps=2 format=3 uid="uid://ui12345"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "MOON BLASTER"
horizontal_alignment = 1

[node name="EasyButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "EASY"

[node name="MediumButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "MEDIUM"

[node name="HardButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "HARD"

[node name="HUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Time: 60.0"
horizontal_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResultLabel" type="Label" parent="GameOver/VBoxContainer"]
layout_mode = 2
text = "YOU WIN"
horizontal_alignment = 1

[node name="CheeseTrophy" type="Control" parent="GameOver"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -150.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOver/CheeseTrophy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
color = Color(1, 0.84, 0, 1)

[node name="Label" type="Label" parent="GameOver/CheeseTrophy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "CHEESE TROPHY"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOver/VBoxContainer"]
layout_mode = 2
text = "PLAY AGAIN"

[connection signal="pressed" from="MainMenu/VBoxContainer/EasyButton" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MediumButton" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/HardButton" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
